# rust_signalr_client

./: .gitignore  CLAUDE.md  Cargo.toml  LICENSE  README.md  check_output.txt  claude.md  test_output.txt
dotnet/SignalRTestService/: Dockerfile  Program.cs  SignalRTestService.csproj  TestHub.cs
src/: lib.rs  platform.rs
src/client/: client.rs  configuration.rs  context.rs  mod.rs
src/communication/: client_tokio.rs  client_wasm.rs  common.rs  mod.rs  reconnection.rs
src/completer/: completed_future.rs  manual_future.rs
src/execution/: actions.rs  arguments.rs  callback.rs  enumerable.rs  invocation.rs  storage.rs  storage_tokio.rs
src/protocol/: hub_protocol.rs  invoke.rs  mod.rs  msgpack.rs  negotiate.rs
src/tests/: mod.rs  tests_msgpack.rs  tests_tokio.rs
